# recourse

./: .dockerignore  .env.example  .gitignore  Dockerfile  handoff.md  log.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 0001_init.sql  0002_auth_challenges.sql  0003_apple_accounts.sql  0004_account_providers.sql  0005_email_accounts.sql  0006_passkeys.sql
backend/secrets/: README.md
backend/src/: app.rs  config.rs  db.rs  indexer.rs  main.rs  routes.rs
backend/src/handlers/: auth.rs  demo.rs  disputes.rs  evidence.rs  health.rs  mod.rs  payments.rs  policies.rs
backend/src/jobs/: indexer.rs  mod.rs  resolver.rs
backend/src/models/: mod.rs  payment.rs  policy.rs
backend/src/services/: account_sessions.rs  apple_auth.rs  attestor.rs  auth.rs  chain.rs  evidence.rs  google_auth.rs  mod.rs  passkey.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  GenVectorHashes.s.sol  Seed.s.sol
contracts/src/: MockUSYCAdapter.sol  PolicyEngine.sol  PolicyRegistry.sol  RecourseEscrow.sol  SettlementVault.sol  Types.sol
contracts/test/: EscrowVault.t.sol  PolicyEngine.t.sol  PolicyRegistry.t.sol  VectorReader.sol
deployments/: arc-config.json  arc-testnet.json  seed-arc-testnet.json
docs/recourse/: recourse-architecture.md  recourse-handoff-claude-code.md  recourse-ios-architecture.md  recourse-log-seed.md  recourse-prd.md
engine/: package-lock.json  package.json  tsconfig.json
engine/scripts/: auth-negative-test.mjs  open-dispute.mjs  seed.mjs
engine/src/: abi.ts  compiler.ts  engine.ts  hash.ts  index.ts  types.ts
engine/test/: compiler.test.ts  vectors.test.ts
mobile/: README.md
mobile/Recourse.xcodeproj/: project.pbxproj
mobile/RecourseTests/: AccountSessionTests.swift  ArcContractReaderTests.swift  ArcContractWriterTests.swift  ArcLiveReadTests.swift  ArcLocalWriteTests.swift  CheckoutWorkflowTests.swift  ContractABITests.swift  DisputeWorkflowTests.swift  DomainTestDoubles.swift  EvidenceAPIClientTests.swift  PaymentRequestTests.swift  TestnetLocalSignerTests.swift  USDCAmountTests.swift  VerdictWorkflowTests.swift
mobile/scripts/: generate_project.rb  verify_local_writes.sh
ops/: codegen.mjs  docker-compose.yml
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/components/: brand-mark.tsx  (+22 more)
(+81 files in other folders)
