[package]
name = "recourse-backend"
version = "0.1.0"
edition = "2021"
description = "Recourse indexer and read API. Indexes Arc escrow state into Postgres and serves reads. Holds no business logic (R4): verdicts come from the onchain previewVerdict (R2)."

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "macros", "migrate"] }
alloy = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
